# bd4h-final-project

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: create_adj_mat.py  process_mimic_iii.py
data/output/: SMILES_tok_ids_iii.pkl  atc3toSMILES_iii.pkl  ddi_A_iii.pkl  diag_txt_input_ids_iii.pkl  input_smiles_init_rep_iii.pkl  pro_txt_input_ids_iii.pkl  sym2idx_iii.pkl  sym_comatrix_iii.npy  sym_count_iii.pkl  sym_txt_input_ids_iii.pkl  voc_iii_sym1_mulvisit.pkl
data/preprocessing/: gen_records_ddi.py  input_ids_sdp_iii.py  input_smiles_iii_2.py  processing_iii.py  sym_info_iii.py  sym_tagger_iii.py
src/bd4h-final-project/: __init__.py  main.py  satsolver.py
src/bd4h-final-project/models/: TransformerEncoder.py  models.py
src/bd4hFinalProject/: DrugRecommendationTask.py  main.py  plots.py  satsolver.py  util.py
src/bd4hFinalProject/models/: TransformerEncoder.py  layers.py  models.py
