[build-system]
requires = ["setuptools >= 75.8.0", "wheel >= 0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bd4hFinalProject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyhealth>=1.1.3",
]
